** RELEASE 0.1.0 (Pending) **

* Ability to run multiple Beaver DSL files at once

** RELEASE 0.0.1 (09/24/2011) **

* Initial release